--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "dependencies": {
         "@fortawesome/fontawesome-free": "^6.2.1",
         "@heroicons/react": "^2.0.13",
-        "daisyui": "^2.42.1"
+        "chart.js": "^4.0.1",
+        "daisyui": "^2.42.1",
+        "react-chartjs-2": "^5.0.1"
     }
 }
